--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ iced = "0.2"
 iced_native = "0.3"
 
 # crypto
-rand = "0.8"
-k256 = { version = "0.7", features = ["zeroize", "arithmetic"] }
-chacha20poly1305 = "0.7"
+rand_core = { version = "0.5", features = ["getrandom"] }
+k256 = { version = "0.7", features = ["zeroize", "arithmetic", "ecdh"] }
+chacha20poly1305 = { version = "0.7", features = ["chacha20"] }
+hkdf = "0.10"
+sha2 = "0.9"
