--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,8 @@ chacha20poly1305 = { version = "0.7", features = ["default"] }
 hkdf = "0.10"
 sha2 = "0.9"
 
+# data exchange
+serde = { version = "1.0", features = ["derive"] }
+rmp-serde = "0.15.0"
+
 # TODO: kitbag, passerine, data-defined-datatypes (ddd)
